[tool.poetry]
name = "py-tutorial-bot"
version = "0.1.0"
description = ""
authors = ["timosii <holdcarter@holdcarter.ru>"]
readme = "README.md"
packages = [{include = "py_tutorial_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
aiogram = "^3.1.1"
requests = "^2.31.0"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
